# agentic-dev

./: .gitignore  .markdownlint.yaml  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  GEMINI.md  LICENSE  README.md  SMART_AI_ROUTER.md  agents.yaml  package.sh  pyproject.toml  release.sh  report.json
.agent/: .gitignore  CHANGELOG.md  Makefile  README.md  SMART_AI_ROUTER.md  cli_help.txt  pyproject.toml  router.yaml  test_file.txt
.agent/adr/: 018-interactive-fixer-pattern.md
.agent/adrs/: ADR-001-git-like-distributed-synchronization-architecture.md  ADR-001-monorepo-structure.md  ADR-002-sqlite-as-local-cache-layer.md  ADR-002-supabase.md  ADR-003-fastapi-backend.md  ADR-003-supabase-for-real-time-collaboration.md  ADR-004-governance-state-enforcement.md  ADR-004-testing-strategy.md  ADR-005-ai-driven-governance-preflight.md  ADR-005-nextjs-app-router.md  ADR-006-encrypted-secret-management.md  ADR-006-radix-tailwind.md  ADR-007-expo-react-native.md  ADR-007-voice-service-abstraction-layer.md  ADR-008-nativewind.md  ADR-008-unified-cloud-voice-provider-deepgram.md  ADR-009-expo-router.md  ADR-009-offline-local-voice-stack.md  ADR-010-model-context-protocol-adoption.md  ADR-010-opentelemetry.md  ADR-011-langgraph-conversational-agent-framework.md  ADR-012-hybrid-vad-strategy.md  ADR-013-voice-agent-streaming-and-process-management.md  ADR-014-agent-audit-command.md  ADR-015-interactive-preflight-repair.md  ADR-016-cli-output-standards.md  ADR-016-openai-data-processor.md  ADR-017-agent-cli-command-registry.md  ADR-017-sidecar-pattern-for-ml.md  ADR-018-node-tooling-strategy.md  ADR-019-global-artifact-id-strategy.md  ADR-020-mobile-platform-support-policy.md  ADR-021-architectural-exception-records.md  ADR-022-interactive-fixer-pattern.md  ADR-024-introduce-user-journeys.md  ADR-025-lazy-ai-service-initialization.md  ADR-026-service-scoped-secret-management.md  ADR-027-security-blocklist-pattern.md  ADR-028-typer-synchronous-cli-architecture.md  ADR-029-adk-multi-agent-integration.md  (+20 more)
.agent/backups/: README.md.backup-20260118_102023  config.py.backup-20260118_102023
.agent/cache/: agent.db
.agent/docs/: README.md  admin_console.md  agent_tools.md  ai_integration.md  architecture_overview.md  backend_voice.md  commands.md  configuration.md  console-personality.md  console.md  custom-tools.md  enable-google-stt.md  environment_variables.md  getting_started.md  governance.md  governance_standards.md  implementation-engine.md  journey_yaml_spec.md  manual_implementation.md  mcp_integration.md  notebooklm.md  notion_integration.md  openapi.json  openapi.yaml  release.md  rules_and_instructions.md  runbook-gates.md  runbook-generation-pipeline.md  runbook_api_usage.md  runbook_skeleton_spec.md  secret_management.md  supabase_integration.md  tests.md  tools.md  tools_reference.md  troubleshooting.md  troubleshooting_guide.md  user_journeys.md  voice-agent.md  workflows.md
.agent/etc/: agent.yaml  agents.yaml  notion_schema.json  query.yaml  router.yaml  security_patterns.yaml  sync.yaml  voice.yaml
.agent/logs/: preflight-INFRA-004-1768109400.md  preflight-INFRA-005-1768102647.md  preflight-INFRA-005-1768103835.md  preflight-INFRA-005-1768104226.md  preflight-INFRA-005-1768104704.md  preflight-INFRA-005-1768108893.md  preflight-MOBILE-002-1768127062.md  preflight-MOBILE-002-1768136135.md  preflight-MOBILE-002-1768136780.md
.agent/rules/: 000-language-agnostic.mdc  005-no-stubs.mdc  100-main.mdc  101-the-team.mdc  102-global-compliance-requirements.mdc  200-architectural-standards.mdc  201-api-contract-validation.mdc  202-adr-standards.mdc  203-state-enforcement.mdc  300-commit-workflow.mdc  301-anti-drift.mdc  302-env-safety.mdc  303-breaking-changes.mdc  400-lean-code.mdc  401-no-stubs.mdc  402-colours.mdc  500-test.mdc  501-documentation.mdc  502-license-header.mdc  600-mobile-platform-support.mdc  adr-standards.mdc  anti-drift.mdc  api-contract-validation.mdc  architectural-standards.mdc  breaking-changes.mdc  colours.mdc  commit-workflow.mdc  documentation.mdc  env-safety.mdc  global-compliance-requirements.mdc  lean-code.mdc  license-header.mdc  main.mdc  mobile-platform-support.mdc  state-enforcement.mdc  test.mdc  the-team.mdc
.agent/scripts/: add_licenses.py  backfill_journeys.py  fetch_last_chat_session.py  fetch_last_session.py  generate_journeys.py  notion_schema_manager.py
.agent/src/: VERSION
.agent/templates/: adr-template.md  exception-template.md  journey-template.yaml  license_header.txt  plan-template.md  runbook-template.md  story-template.md
.agent/tests/: README.md  __init__.py  conftest.py  smoke_sync.sh  test_agent_integration.py  test_ai_provider.py  test_cli_options.py  test_console_prompt.py  test_count_tokens.py  test_dashboard_api.py  test_infra_107.py  test_integration_runbook.py  test_interrupt.py  test_lint.py  test_local_tts.py  test_mcp_client.py  test_pipeline_hardening_infra_185.py  test_python_agent.py  test_runbook_postprocess.py  test_secret_rotation.py  test_sentence_buffer.py  test_sync_behaviors.py  test_sync_db.py  test_sync_notion.py  test_sync_ops.py  test_tui_agentic.py  test_utils_sr_gate.py  test_vad.py  test_voice_flow.py  test_voice_flow_streaming.py
.agent/web/: eslint.config.js  index.html  package-lock.json  package.json  postcss.config.js  tailwind.config.js  vite.config.ts
.agent/workflows/: commit.md  (+11 more)
(+1147 files in other folders)
