[project]
name = "backend"
version = "0.1.0"
description = "Backend implementation"
authors = [{ name = "Your Name", email = "you@example.com" }]
dependencies = [
    "fastapi>=0.100.0",
    "uvicorn>=0.23.0",
    "SQLAlchemy>=2.0",
    "psycopg2-binary>=2.9",
    "python-dotenv>=1.0",
    "requests>=2.31.0",
    "fastapi-users>=12.0",
    "fastapi-users-db-sqlalchemy>=4.1",
    "passlib>=1.7",
    "bcrypt>=4.0",
    "httpx>=0.25.0",
    "deepgram-sdk>=3.0",
    "respx>=0.20.0",
    "prometheus-client>=0.17.0",
    "opentelemetry-api>=1.20.0",
    "opentelemetry-sdk>=1.20.0",
    "keyring>=24.0.0",
    "cryptography>=41.0.0",
    "modelcontextprotocol>=0.1.0",
    "pytest>=8.0.0",
    "python-dotenv>=1.0.0",
    # LangGraph & LangChain for conversational agent
    "langgraph>=0.2.0",
    "langchain>=0.3.0",
    # LLM providers (install based on which you use)
    "langchain-openai>=0.2.0",
    "langchain-anthropic>=0.3.0",
    "langchain-google-genai>=0.2.0",
    # Local Voice (INFRA-030)
    "kokoro-onnx>=0.3.1",
    "soundfile>=0.12.1",
    "scipy>=1.11.0",
]
requires-python = ">=3.10"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"